--- a/Vistas/html/home.html
+++ b/Vistas/html/home.html
@@ -67,7 +67,7 @@
       </button>
     </div>
     <div class="seccion2">
-      <h1>Conocenos</h1>
+      <h1>Conócenos</h1>
       <p>
         En "El Sabor de las Américas", cada plato es una historia que contar.
         Desde nuestros deliciosos desayunos hasta nuestras comidas
